--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Guibirow Home Page</tilte>
- </head>
- <body>
- <h1>Index</h1>
- </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
